--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -1,7 +1,8 @@
+
 name: Latest blog post workflow
 on:
   schedule:
-    Runs every hour
+    # Runs every hour
     - cron: '0 * * * *'
   workflow_dispatch:
 
